var searchData=
[
  ['languagepack_2eh_0',['LanguagePack.h',['../LanguagePack_8h.html',1,'']]],
  ['languagepackrequest_2eh_1',['languagepackrequest.h',['../gRPC_2include_2LanguagePackRequest_8h.html',1,'(Global Namespace)'],['../REST_2include_2controllers_2LanguagePackRequest_8h.html',1,'(Global Namespace)']]],
  ['listlanguages_2eh_2',['listlanguages.h',['../gRPC_2include_2ListLanguages_8h.html',1,'(Global Namespace)'],['../REST_2include_2controllers_2ListLanguages_8h.html',1,'(Global Namespace)']]]
];
