var searchData=
[
  ['language_0',['language',['../classcatena_1_1REST_1_1ISocketReader.html#a5314331e7d51be708fe40354e5beaf0c',1,'catena::REST::ISocketReader::language()'],['../classcatena_1_1REST_1_1SocketReader.html#a59e5e35b9b9d421e186252caf9bd552b',1,'catena::REST::SocketReader::language()']]],
  ['languagepack_1',['languagepack',['../classcatena_1_1common_1_1LanguagePack.html#a44ec157a8c0a85983ed8e20501f16bc4',1,'catena::common::LanguagePack::LanguagePack(const LanguagePack &amp;)=delete'],['../classcatena_1_1common_1_1LanguagePack.html#a80a5038590c1d29d2aaeae1ca97e068c',1,'catena::common::LanguagePack::LanguagePack(LanguagePack &amp;&amp;)=default'],['../classcatena_1_1common_1_1LanguagePack.html#ae6d28349844a9789c54af9f33a34b051',1,'catena::common::LanguagePack::LanguagePack(const std::string &amp;languageCode, const std::string &amp;name, ListInitializer list, IDevice &amp;dev)']]],
  ['languagepackrequest_2',['languagepackrequest',['../classcatena_1_1gRPC_1_1LanguagePackRequest.html#ae269dd85e53cb2300f236630477f6410',1,'catena::gRPC::LanguagePackRequest::LanguagePackRequest()'],['../classcatena_1_1REST_1_1LanguagePackRequest.html#af1878e7cb5e3d15589015738fbb8b544',1,'catena::REST::LanguagePackRequest::LanguagePackRequest()']]],
  ['listlanguages_3',['listlanguages',['../classcatena_1_1gRPC_1_1ListLanguages.html#a955464bcd350da089c31ae9a57dd4889',1,'catena::gRPC::ListLanguages::ListLanguages()'],['../classcatena_1_1REST_1_1ListLanguages.html#a1e84d58df4847f37bb2152eba26c091f',1,'catena::REST::ListLanguages::ListLanguages()']]]
];
